--- a/package.json
+++ b/package.json
@@ -1,53 +1,51 @@
 {
-  "name": "contentful-starter-gatsby-blog",
-  "description": "Contentful Gatsby Starter Blog",
-  "private": true,
-  "version": "0.0.1",
-  "author": "Contentful <opensource@contentful.com>",
-  "bugs": {
-    "url": "https://github.com/contentful/starter-gatsby-blog/issues"
-  },
-  "dependencies": {
-    "gatsby": "^4.0.0",
-    "gatsby-plugin-image": "^2.0.0",
-    "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-sharp": "^4.0.0",
-    "gatsby-source-contentful": "^6.1.4",
-    "gatsby-transformer-remark": "^5.0.0",
-    "gatsby-transformer-sharp": "^4.0.0",
-    "gh-pages": "^3.1.0",
-    "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
-  },
-  "devDependencies": {
-    "contentful-import": "^7.8.6",
-    "netlify-cli": "^2.54.0"
-  },
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "homepage": "https://github.com/contentful/starter-gatsby-blog#readme",
-  "keywords": [
-    "gatsby",
-    "contentful",
-    "starter"
-  ],
-  "license": "MIT",
-  "main": "n/a",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/contentful/starter-gatsby-blog.git"
-  },
-  "scripts": {
-    "dev": "gatsby develop",
-    "build": "gatsby build",
-    "heroku-postbuild": "gatsby build",
-    "serve": "gatsby serve",
-    "netlify:login": "netlify login",
-    "netlify:deploy": "netlify deploy -d public -p",
-    "refresh": "rm -rf .cache node_modules public package-lock.json && npm install && npm run develop",
-    "rebuild": "rm -rf .cache public && npm run dev"
-  }
+	"name": "contentful-starter-gatsby-blog",
+	"description": "Contentful Gatsby Starter Blog",
+	"private": true,
+	"version": "0.0.1",
+	"author": "Contentful <opensource@contentful.com>",
+	"bugs": {
+		"url": "https://github.com/contentful/starter-gatsby-blog/issues"
+	},
+	"dependencies": {
+		"gatsby": "^4.0.0",
+		"gatsby-plugin-image": "^2.0.0",
+		"gatsby-plugin-react-helmet": "^5.0.0",
+		"gatsby-plugin-sharp": "^4.0.0",
+		"gatsby-source-contentful": "^6.1.4",
+		"gatsby-transformer-remark": "^5.0.0",
+		"gatsby-transformer-sharp": "^4.0.0",
+		"gh-pages": "^3.1.0",
+		"lodash": "^4.17.21",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-helmet": "^6.1.0"
+	},
+	"devDependencies": {
+		"contentful-import": "^7.8.6",
+		"netlify-cli": "^2.54.0"
+	},
+	"engines": {
+		"node": ">=14.0.0"
+	},
+	"homepage": "https://github.com/contentful/starter-gatsby-blog#readme",
+	"keywords": [
+		"gatsby",
+		"contentful",
+		"starter"
+	],
+	"license": "MIT",
+	"main": "n/a",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/contentful/starter-gatsby-blog.git"
+	},
+	"scripts": {
+		"build": "gatsby build",
+		"clean": "gatsby clean",
+		"dev": "gatsby develop",
+		"rebuild": "rm -rf .cache public && npm run dev",
+		"serve": "gatsby serve",
+		"troubleshoot": "rm -rf .cache node_modules public package-lock.json && npm i && npm run dev"
+	}
 }
