--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		"url": "https://github.com/contentful/starter-gatsby-blog/issues"
 	},
 	"dependencies": {
+		"@types/react-helmet": "^6.1.5",
+		"concurrently": "^7.0.0",
 		"gatsby": "^4.0.0",
 		"gatsby-plugin-image": "^2.0.0",
 		"gatsby-plugin-react-helmet": "^5.0.0",
@@ -17,7 +19,8 @@
 		"gatsby-transformer-sharp": "^4.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-helmet": "^6.1.0"
+		"react-helmet": "^6.1.0",
+		"typescript": "^4.5.5"
 	},
 	"engines": {
 		"node": ">=14.0.0"
@@ -37,7 +40,9 @@
 	"scripts": {
 		"build": "gatsby build",
 		"clean": "gatsby clean",
-		"dev": "gatsby develop",
+		"dev-gatsby": "gatsby develop",
+		"dev-typescript": "tsc -w",
+		"dev": "concurrently \"npm:dev-gatsby\" \"npm:dev-typescript\"",
 		"rebuild": "rm -rf .cache public && npm run dev",
 		"serve": "gatsby serve",
 		"troubleshoot": "rm -rf .cache node_modules public package-lock.json && npm i && npm run dev"
