--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@typescript-eslint/parser": "^5.12.0",
 		"babel-plugin-styled-components": "^2.0.3",
 		"concurrently": "^7.0.0",
+		"dotenv": "^16.0.0",
 		"eslint": "^7.32.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-plugin-import": "^2.25.4",
