--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
+		"react-is": "^17.0.2",
 		"styled-components": "^5.3.3",
 		"typescript": "^4.5.5"
 	},
