testing changing gatsby api files to typescript

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"gatsby-plugin-react-helmet": "^5.0.0",
 		"gatsby-plugin-sharp": "^4.0.0",
 		"gatsby-plugin-styled-components": "^5.7.0",
+		"gatsby-plugin-typescript": "^4.7.0",
 		"gatsby-source-contentful": "^6.1.4",
 		"gatsby-transformer-remark": "^5.0.0",
 		"gatsby-transformer-sharp": "^4.0.0",
@@ -37,6 +38,7 @@
 		"react-helmet": "^6.1.0",
 		"react-is": "^17.0.2",
 		"styled-components": "^5.3.3",
+		"ts-node": "^10.5.0",
 		"typescript": "^4.5.5"
 	},
 	"engines": {
