--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,12 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["plugin:react/recommended", "airbnb"],
+  "extends": [
+    "airbnb",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
@@ -24,6 +29,7 @@
     "comma-spacing": "warn",
     "dot-location": "warn",
     "eol-last": "warn",
+    "func-style": ["warn", "expression"],
     "function-paren-newline": "off",
     "implicit-arrow-linebreak": "off",
     "import/extensions": "off",
@@ -31,12 +37,13 @@
     "import/no-unresolved": "off",
     "import/order": "warn",
     "import/prefer-default-export": "off",
-    "indent": "off",
+    "indent": "warn",
     "jsx-a11y/heading-has-content": "warn",
-    "jsx-quotes": ["warn", "prefer-single"],
+    "jsx-quotes": ["warn", "prefer-double"],
     "keyword-spacing": "warn",
     "linebreak-style": "off",
     "max-len": "warn",
+    "new-cap": "warn",
     "no-confusing-arrow": "off",
     "no-mixed-spaces-and-tabs": "off",
     "no-multi-spaces": "warn",
@@ -45,16 +52,18 @@
     "no-trailing-spaces": "warn",
     "no-undef": "warn",
     "no-underscore-dangle": "warn",
-    "no-unused-vars": "warn",
     "no-use-before-define": "off",
+    "no-useless-rename": "warn",
     "no-useless-return": "warn",
     "object-curly-newline": "off",
     "object-curly-spacing": "warn",
+    "object-shorthand": "warn",
     "operator-linebreak": "warn",
     "padded-blocks": "warn",
     "prefer-const": "warn",
     "prefer-destructuring": "warn",
     "quotes": "off",
+    "radix": "warn",
     "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
     "react/jsx-boolean-value": "warn",
     "react/jsx-closing-bracket-location": "warn",
@@ -68,13 +77,19 @@
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-props-no-multi-spaces": "warn",
     "react/jsx-tag-spacing": "warn",
+    "react/jsx-uses-react": "off",
     "react/no-unused-prop-types": "warn",
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off",
     "react/require-default-props": "off",
     "react/self-closing-comp": "warn",
     "semi": "warn",
     "space-before-blocks": "warn",
+    "space-before-function-paren": "warn",
     "space-in-parens": "warn",
+    "spaced-comment": "warn",
     "switch-colon-spacing": "warn",
-    "@typescript-eslint/no-use-before-define": ["error"]
+    "@typescript-eslint/no-use-before-define": ["warn"],
+    "@typescript-eslint/no-unused-vars": ["warn"]
   }
 }
