--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,7 +62,7 @@
     "padded-blocks": "warn",
     "prefer-const": "warn",
     "prefer-destructuring": "warn",
-    "quotes": "off",
+    "quotes": ["warn", "double"],
     "radix": "warn",
     "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
     "react/jsx-boolean-value": "warn",
